# gb2seq

./: .gitignore  AUTHORS  CHANGELOG.md  MANIFEST.in  Makefile  README.md  noxfile.py  pyproject.toml  setup.py
data/: EPI_ISL_402125.fasta  EPI_ISL_601443.fasta
gb2seq/: __init__.py  alignment.py  annotate.py  compare.py  features.py  genome.py  sars2.py  translate.py
gb2seq/data/: BavPat2.fasta  EPI_ISL_678597.fasta  NC_045512.2.gb
sars2seq/: __init__.py  alignment.py  annotate.py  annotation-gff.py  change.py  checker.py  features.py  genome.py  sars2.py  sequence.py  translate.py  variants.py
src/gb2seq/: __init__.py  alignment.py  compare.py  genome.py  sars2.py  translate.py  variants.py
src/gb2seq/data/: NC_045512.2.gb
test/: fasta.py  test_alignment.py  test_change.py  test_checker.py  test_features.py  test_genome.py  test_genomes.py  test_sars2.py  test_sequence.py  test_translate.py  test_variants.py
