[tool.poetry]
name = "gb2seq"
version = "0.2.5"
description = "Python library and scripts for working with unannotated sequences based on an annotated reference genome provided by a GenBank file."
authors = ["Terry C. Jones <terence.jones@charite.de>", "Barbara Muehlemann <barbara.muehlemann@charite.de>", "Udo Gieraths <udo.gieraths@charite.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
dark-matter = "^4.0.55"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
